# 02_TG_naladka

./: .gitignore  .pre-commit-config.yaml  2.ui  9_qt4.ui  RBMK_naladka.py  Readme.md  TG_pyQt_03.py  TG_pyQt_06.py  _setup.py  _win_step.py  bug_traker  build.py  grath.py  grath_from_tg_animation.py  grath_from_tg_static_2.py  grath_from_tg_static_5.py  grath_from_tg_static_8.py  grath_from_tg_static_9(qt4).py  grath_from_tg_static_9(qt4)_uic.py  grath_from_tg_static_9(tk).py  grath_from_tg_static_9.py  grath_matplot.py  groupbox.py  gui.ui  log.txt  main.py  new1  new2  out_merge_4.csv  pyproject.toml  qt_des.py  read_csv_3_any(qt4).py  read_csv_3_any.py  read_csv_4_any.py  readme.txt  requirements.txt  settings.json  setup.py  struct_tg_naladka  test_1.py  (+7 more)
DATA_in/: test.csv  test_2.csv  ТГ12 2020-08-15 104213.csv
Documentation/RelNote/: 0.0.1.17.txt  0.0.1.18.txt  0.0.1.19.txt  0.0.1.22.txt  0.0.1.23.txt  0.0.1.24.txt  0.0.1.25.txt  0.2.1.txt
LOG/: gsm_tg2_b.txt
NV_4/: README_NV4.MD  connect_to_PLC.py  data_base.py  gui_imitator.py  gui_imitator_first.py  imitator_gui.py  main.py  main_gui.py  model_NV.py  novovoroneg.py  requirements.txt  settings.py  test.py
NV_4/graphs/: graph_gpk.py  graph_time.py
NV_4/gui/: sarz_gui.py
NV_4/help/: help.MD  hex.py  py_qt.py
NV_4/nv_package/: connect_to_PLC.py  gui_imitator.py  gui_imitator_first.py  gui_main.py  gui_sarz.py  hex.py  main_gui.py  model_NV.py  sarz_gui.py  settings.py  test.py  test_class.py
NV_4/nv_package/graphs/: graph_gpk.py  graph_value.py  value_gpk.py
OLD_py/: TG_pyQt_01.py  TG_pyQt_02.py  TG_pyQt_04.py  TG_pyQt_05.py  TG_pyQt_07.py  TG_pyQt_08.py  class_test.py  grath_from_file_animation.py  grath_from_tg_static.py  grath_from_tg_static_3.py  grath_from_tg_static_6.py  grath_from_tg_static_7.py  grath_from_tg_static_7_class.py  main.py  read_csv.py  read_csv_2.py  setup.py  stepper_RBMK.py  test_Qt_1.py  test_Qt_3.py  test_ani.py  tg.bat  win_step.py
OLD_py/LOG/: gsm_tg2_a.txt  log_2.txt  test_2.txt
UI/: main.ui  qt_des.ui
bugs/: bug-006.md  bug_traker
config/: config.py
doc/: RelNote.txt
docs/: CHANGELOG.md  RelNote.txt
input/: qp.txt
scripts/: release.sh  run.sh  toexe.sh  venv_pip.sh
src/: _version.py  grath_matplot.py  grath_pyQtGrath.py  main.py  myGroupBox.py  pregressbar.py  test.py  test2.py  version.py
src/DATA_in/: test.csv
src/config/: config.py
src/logic/: logic.py  regulator_analyzer.py
src/model/: basemodel.py
src/ui/: MainWindowUI.py  deepseek  graph_matplot.py  myGroupBox.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_basemodel.py  test_config.py
tg-naladka/: pyproject.toml  struct_tg_naladka
tg-naladka/Documentation/RelNote/: 0.0.1.20.txt  0.0.1.21.txt  0.0.1.23.txt  0.2.0.txt  0.3.0.txt
tg-naladka/bugs/: bug-006.md
tg-naladka/src/: main.py
tg-naladka/src/DATA_in/: qp.txt
tg-naladka/src/config/: config.py
tg-naladka/src/logic/: logic.py  regulator_analyzer.py
tg-naladka/src/model/: basemodel.py
tg-naladka/src/ui/: MainWindowUI.py  graph_matplot.py  graph_pyqtgraph.py  graph_pyqtgraph_deep.py  graph_pyqtgraph_gpt.py  test_pyqtgrayh copy.py  test_pyqtgrayh.py
Косяк/: косяк.txt
