[project]
name = "tg-naladka"
dynamic = ["version"]
description = "Программа для визуализации(matplotlib) и анализа данных"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8, <3.9"
authors = [
    {name = "sanja_s", email = "sanja100v@gmail.com"}
]

dependencies = [
    "chardet==5.2.0",
    "contourpy==1.1.1",
    "cycler==0.11.0",
    "fonttools==4.38.0",
    "importlib-metadata==6.0.0",
    "importlib-resources==5.9.0",
    "kiwisolver==1.4.4",
    "lief==0.13.2",
    "matplotlib==3.7.2",
    "numpy==1.24.4",
    "packaging==25.0",
    "pandas==2.0.3",
    "pillow==9.4.0",
    "py-cpuinfo==9.0.0",
    "pyparsing==3.0.9",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.15.0",
    "python-dateutil==2.8.2",
    "pytz==2025.2",
    "pywin32==310 ; sys_platform == 'win32'",
    "reportlab==3.6.12",
    "six==1.16.0",
    "tomli==2.0.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "zipp==3.13.0",
]

[project.urls]
Repository = "https://github.com/sanjas12/02_TG_naladka.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
build = [
    "cx-freeze==7.2.10 ; sys_platform == 'win32'",
]
dev = [
    "commitizen>=3.27.0",
    "pre-commit>= 2.0.0, < 3.0.0",
    "python-semantic-release>=9.3.1",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    # "sys_platform == 'linux'",  # раскоментить если будет в linux собираться
]

[tool.setuptools.packages.find]
where = ["src"]

# ─── Ruff: линтер + форматер ─────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
    "SIM",
]
ignore = ["E501", "UP006", "UP045"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# авто релиз
[tool.semantic_release]
version_toml = []
# Основная ветка
branch = "master"

# Conventional Commits
commit_parser = "conventional"

# Не публикуем в PyPI
upload_to_pypi = false

# Не запускаем build автоматически
build_command = false

# Файлы, где хранится версия
version_variables = [
    "__version__",
    "src/_version.py:__version__"
]

[tool.commitizen]
name = "cz_conventional_commits"

# Текущая версия
version = "0.1.0"

# Какие файлы обновлять
version_files = [
    "__version__",
    "src/_version.py"
]
